tests/src/frontend/typechecking/exhaustiveness/invalid/non_nested_boolean.sk
fun test(): String {
  true match {
  | true -> "Fail\n"
  }
}
